# stm32f4_mpu9250

./: CMakeLists.txt  config.c
Algorithm/src/: CMakeLists.txt
Application/src/: CMakeLists.txt  stm32f4_delay.c  stm32f4_mpu9250.c  stm32f4_rcc.c
Common/src/: CMakeLists.txt  Memory.c
Data/src/: CMakeLists.txt
Drivers/src/: CMakeLists.txt
Gps/src/: CMakeLists.txt
Libraries/STM32F4xx_StdPeriph_Driver/src/: CMakeLists.txt
Libraries/eMPL/: CMakeLists.txt
Math/src/: CMakeLists.txt
Matrix/src/: CMakeLists.txt
Project/: stm32f4_dmp.uvoptx  stm32f4_dmp.uvprojx
Project/RTE/: RTE_Components.h
miniAHRS/: CMakeLists.txt
miniIMU/: CMakeLists.txt
miniIMU/FP/: CMakeLists.txt  FP_Math.c
