cmake_minimum_required (VERSION 2.6)
project (stm32f4_dmp)

ADD_EXECUTABLE( ${PROJECT_NAME} config.c)

target_sources( ${PROJECT_NAME} PUBLIC Libraries/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f401xx.s)



target_include_directories ( ${PROJECT_NAME} PUBLIC include Libraries/STM32F4xx_StdPeriph_Driver/inc )
target_include_directories ( ${PROJECT_NAME} PUBLIC include Libraries/eMPL)
target_include_directories ( ${PROJECT_NAME} PUBLIC include Algorithm/inc )
target_include_directories ( ${PROJECT_NAME} PUBLIC include Matrix/inc )
target_include_directories ( ${PROJECT_NAME} PUBLIC include Drivers/inc )
target_include_directories ( ${PROJECT_NAME} PUBLIC include Math/inc )
target_include_directories ( ${PROJECT_NAME} PUBLIC include miniIMU  )
target_include_directories ( ${PROJECT_NAME} PUBLIC include miniIMU/FP  )
target_include_directories ( ${PROJECT_NAME} PUBLIC include miniAHRS )
target_include_directories ( ${PROJECT_NAME} PUBLIC include Data/inc )
target_include_directories ( ${PROJECT_NAME} PUBLIC include Gps/inc )
target_include_directories ( ${PROJECT_NAME} PUBLIC include Common/inc )
target_include_directories ( ${PROJECT_NAME} PUBLIC include Libraries/CMSIS/Include )
target_include_directories ( ${PROJECT_NAME} PUBLIC include Libraries/CMSIS/Device/ST/STM32F4xx/Include )
target_include_directories ( ${PROJECT_NAME} PUBLIC include Project/RTE )
target_include_directories ( ${PROJECT_NAME} PUBLIC include Application/inc )

add_subdirectory(Application/src)
add_subdirectory(Libraries/STM32F4xx_StdPeriph_Driver/src)
add_subdirectory(Libraries/eMPL)
add_subdirectory(Algorithm/src)
add_subdirectory(Matrix/src)
add_subdirectory(Drivers/src)
add_subdirectory(Math/src)
add_subdirectory(miniIMU)
add_subdirectory(miniIMU/FP)
add_subdirectory(miniAHRS)
add_subdirectory(Data/src)
add_subdirectory(Gps/src)
add_subdirectory(Common/src)


add_definitions( -DUSE_STDPERIPH_DRIVER)
add_definitions( -DSTM32F40_41xxx )
add_definitions( -DARM_MATH_CM4 )
add_definitions( -D__FPU_PRESENT )
add_definitions( -DMPU9250 )
add_definitions( -DSTM32F407xx )
add_definitions( -D__UVISION_VERSION="520" )
add_definitions( -D_RTE_ )


# add_definitions( -DLK=1 )
# add_definitions( -DVERIFIED_BOOT=1 )
# add_definitions( -D_SIGNED_KERNEL=1 )
# add_definitions( -DDEFAULT_UNLOCK=1 )
# add_definitions( -DDM_VERITY=1 )
# add_definitions( -DVIRTIO=1 )
# add_definitions( -DWITH_DEBUG_UART=1 )
# add_definitions( -DWITH_DEBUG_FBCON=1 )
# add_definitions( -DWITH_LGE_LOAD_IMAGE_FROM_UFS=1 )
# add_definitions( -DWITH_LGE_SM_FACTORY_RESET_KR=1 )
# add_definitions( -DDEVICE_TREE=1 )
# add_definitions( -DLGE_FBCON_LARGE_FONT=1 )
# add_definitions( -DSPMI_CORE_V2=1 )
# add_definitions( -DBAM_V170=1 )
# add_definitions( -DABOOT_IGNORE_BOOT_HEADER_ADDRS=1 )
# add_definitions( -DABOOT_FORCE_KERNEL_ADDR=0X80080000 )
# add_definitions( -DABOOT_FORCE_RAMDISK_ADDR=0X82200000 )
# add_definitions( -DABOOT_FORCE_TAGS_ADDR=0X82000000 )
# add_definitions( -DABOOT_FORCE_KERNEL64_ADDR=0X80080000 )
# add_definitions( -DUSB_RESET_FROM_CLK=1 )
# add_definitions( -DWITH_LGE_KSWITCH )
# add_definitions( -DUSE_BOOTDEV_CMDLINE=1 )
# add_definitions( -DUSE_RPMB_FOR_DEVINFO=1 )
# add_definitions( -DTARGET_USES_CHARGERLOGO=1 )
# add_definitions( -DLGE_PM_BATT_ID=1 )
# add_definitions( -DLGE_PM_LK_BATT_ID=1 )
# add_definitions( -DLGE_MINIOS3_BOOT )
# add_definitions( -DLGE_MINIOS3_FRESET )
# add_definitions( -DGLINK_SUPPORT=1 )
# add_definitions( -D_EMMC_BOOT=1 )
# add_definitions( -DLGE_MIPI_DSI_H1_INCELL_QHD_CMD_PANEL )
# add_definitions( -DLGE_LCD_DIMMING_RESET )
# add_definitions( -DMMC_SDHCI_SUPPORT=1 )
# add_definitions( -DUFS_SUPPORT=1 )
# add_definitions( -DUSB30_SUPPORT=1 )
# add_definitions( -DENABLE_PARTIAL_GOODS_SUPPORT=1 )
# add_definitions( -DLPAE=1 )
# add_definitions( -DPLATFORM_USE_SCM_DLOAD=1 )
# add_definitions( -DQFPROM_CORR_CALIB_ROW12_MSB=0X0007424C )
# add_definitions( -DPLATFORM_USE_QMP_MISC=1 )
# add_definitions( -DSUPPORT_CC_MODE=1 )
# add_definitions( -DLGE_DEVICE_COLOR=1 )
# add_definitions( -DPMI_CONFIGURED=1 )
# add_definitions( -DDISPLAY_SPLASH_SCREEN=1 )
# add_definitions( -DDISPLAY_TYPE_MIPI=1 )
# add_definitions( -DDISPLAY_TYPE_DSI6G=1 )
# add_definitions( -DMEMSIZE=0X00400000 )
# add_definitions( -DMEMBASE=0X91600000 )
# add_definitions( -DBASE_ADDR=0X0000000 )
# add_definitions( -DTAGS_ADDR )
# add_definitions( -DRAMDISK_ADDR  )
# add_definitions( -DKERNEL_ADDR=0X80000000 )
# add_definitions( -DKERNEL_SIZE=88 )
# add_definitions( -DSCRATCH_ADDR=0X91C00000 )
# add_definitions( -DSCRATCH_SIZE=740 )
# add_definitions( -DL1_PT_SZ=4 )
# add_definitions( -DL2_PT_SZ=3 )
# add_definitions( -DWITH_LGE_BOOT_MODE=1 )
# add_definitions( -DWITH_LGE_DEVICE_TREE )
# add_definitions( -DWITH_LGE_SM=1 )
# add_definitions( -DWITH_LGE_BOOTLOADER_LOG_SAVE )
# add_definitions( -DWITH_LGE_EARJACK_DEBUGGER )
# add_definitions( -DWITH_LGE_FBCON_ADJUST_FONT=1 )
# add_definitions( -DWITH_LGE_SPLASH_SCREEN=1 )
# add_definitions( -DLGE_CRASH_HANDLER )
# add_definitions( -DKEYMASTER_V1 )
# add_definitions( -DWITH_LGE_COMMON=1 )
# add_definitions( -DWITH_LGE_TARGET_COMMON=1 )
# add_definitions( -DWITH_LGE_FASTBOOT_MENU=1 )
# add_definitions( -DWITH_LGE_FASTBOOT_HARD_RESET=1 )
# add_definitions( -DWITH_LGE_DOWNLOAD=1 )
# add_definitions( -DARM_CPU_CORE_KRYO )
# add_definitions( -DPERIPH_BLK_BLSP=1 )
# add_definitions( -DWITH_CPU_EARLY_INIT=0 )
# add_definitions( -DWITH_CPU_WARM_BOOT=0 )
# add_definitions( -DMMC_SLOT=1 )
# add_definitions( -DDISPLAY_TYPE_MDSS=1 )
# add_definitions( -DARM_CPU_CORTEX_A8=1 )
# add_definitions( -DARM_WITH_CP15=1 )
# add_definitions( -DARM_WITH_MMU=1 )
# add_definitions( -DARM_ISA_ARMV7=1 )
# add_definitions( -DARM_WITH_VFP=1 )
# add_definitions( -DARM_WITH_NEON=1 )
# add_definitions( -DARM_WITH_THUMB=1 )
# add_definitions( -DARM_WITH_THUMB2=1 )
# add_definitions( -DARM_WITH_CACHE=1 )
# add_definitions( -DARM_WITH_L2=1 )
# add_definitions( -DASSERT_ON_TAMPER=1 )
# add_definitions( -DBOARD=MSM8996_H1_KR )
# add_definitions( -DPROJECT_MSM8996_H1_KR=1 )
# add_definitions( -DTARGET_MSM8996_ALPHAH=1 )
# add_definitions( -DPLATFORM_MSM8996=1 )
# add_definitions( -DARCH_ARM=1 )
# add_definitions( -DWITH_APP_ABOOT=1 )
# add_definitions( -DWITH_APP_MMUTEST=1 )
# add_definitions( -DWITH_DEV_FBCON=1 )
# add_definitions( -DWITH_DEV_GCDB_DISPLAY=1 )
# add_definitions( -DWITH_DEV_KEYS=1 )
# add_definitions( -DWITH_DEV_PMIC_PM8X41=1 )
# add_definitions( -DWITH_DEV_PMIC_PMI8994=1 )
# add_definitions( -DWITH_DEV_QPNP_HAPTIC=1 )
# add_definitions( -DWITH_DEV_QPNP_LED=1 )
# add_definitions( -DWITH_DEV_QPNP_WLED=1 )
# add_definitions( -DWITH_DEV_VIB=1 )
# add_definitions( -DWITH_LIB_DEBUG=1 )
# add_definitions( -DWITH_LIB_HEAP=1 )
# add_definitions( -DWITH_LIB_LIBC=1 )
# add_definitions( -DWITH_LIB_LIBFDT=1 )
# add_definitions( -DWITH_LIB_OPENSSL=1 )
# add_definitions( -DWITH_LIB_OPENSSL_CRYPTO=1 )
# add_definitions( -DWITH_LIB_PTABLE=1 )
# add_definitions( -DWITH_LIB_ZLIB_INFLATE=1 )
# add_definitions( -DDEBUG=1 )
# add_definitions( -DEMMC_BOOT=1 )
# add_definitions( -DENABLE_SDHCI_SUPPORT=1 )
# add_definitions( -DENABLE_UFS_SUPPORT=1 )
# add_definitions( -DENABLE_BOOT_CONFIG_SUPPORT=1 )
# add_definitions( -DENABLE_USB30_SUPPORT=1 )
# add_definitions( -DENABLE_QGIC3=1 )
# add_definitions( -DENABLE_SECAPP_LOADER=1 )
# add_definitions( -DENABLE_RPMB_SUPPORT=1 )
# add_definitions( -DENABLE_GLINK_SUPPORT=1 )
# add_definitions( -DENABLE_PWM_SUPPORT=1 )
# add_definitions( -DENABLE_LPAE_SUPPORT=1 )
# add_definitions( -DENABLE_THUMB=0 )
# add_definitions( -DENABLE_FBCON_DISPLAY_MSG=0 )
# add_definitions( -DENABLE_REBOOT_MODULE=1 )
# add_definitions( -DPLRTEST_ENABLE=1 )
# add_definitions( -DNON_PCTOOL=1 )